--- a/topics/c_glossaries.dita
+++ b/topics/c_glossaries.dita
@@ -40,7 +40,7 @@
                 it into a CAT tool.</p>
             <fig id="fig_cjc_mml_kpb">
                 <title>A simple bilingual glossary developed in a spreadsheet editor</title>
-                <image href="../../images/writing-glossary.png" id="image_urr_4pl_kpb">
+                <image href="../images/writing-glossary.png" id="image_urr_4pl_kpb">
                     <alt>A simple bilingual glossary developed in a spreadsheet editor</alt>
                 </image>
             </fig>
