--- a/topics/c_localization_friendly_images.dita
+++ b/topics/c_localization_friendly_images.dita
@@ -15,7 +15,7 @@
             <p>To simplify the localization process, avoid using descriptions within images.
                 Instead, use numbered callouts and explain them under the image.SS</p>
             <fig id="fig_fbl_rlf_kpb">
-                <image href="../../images/writing-callouts.png" id="image_kld_slf_kpb" width="650">
+                <image href="../images/writing-callouts.png" id="image_kld_slf_kpb" width="650">
                     <alt>A 'fig' DITA element containing an image with two callouts that are
                         explained in a numbered list below the image</alt>
                 </image>
