--- a/topics/t_importing_a_dita_project_into_memoq.dita
+++ b/topics/t_importing_a_dita_project_into_memoq.dita
@@ -19,7 +19,7 @@
                     </menucascade>.</cmd>
                 <info>
                     <fig id="fig_hh1_zrr_jpb">
-                        <image href="../../images/memoq-new-project.png" id="image_b1y_g3s_jpb"
+                        <image href="../images/memoq-new-project.png" id="image_b1y_g3s_jpb"
                             width="700">
                             <alt>The 'New Project' menu in memoQ</alt>
                         </image>
@@ -34,7 +34,7 @@
                 <cmd>Choose a <uicontrol>Language pair</uicontrol>.</cmd>
                 <info>
                     <fig id="fig_kp4_zrr_jpb">
-                        <image href="../../images/memoq-language-pair.png" id="image_eqb_k3s_jpb"
+                        <image href="../images/memoq-language-pair.png" id="image_eqb_k3s_jpb"
                             width="650">
                             <alt>Choosing a language pair in 'New memoQ project' dialog</alt>
                         </image>
@@ -67,7 +67,7 @@
                     </menucascade>.</cmd>
                 <info>
                     <fig id="fig_zjf_1sr_jpb">
-                        <image href="../../images/memoq-import.png" id="image_jly_n3s_jpb"
+                        <image href="../images/memoq-import.png" id="image_jly_n3s_jpb"
                             width="650">
                             <alt>The 'Import' menu in memoQ</alt>
                         </image>
@@ -80,7 +80,7 @@
                         <uicontrol>OK</uicontrol>.</cmd>
                 <info>
                     <fig id="fig_hjq_1sr_jpb">
-                        <image href="../../images/memoq-base-path.png" id="image_b54_p3s_jpb"
+                        <image href="../images/memoq-base-path.png" id="image_b54_p3s_jpb"
                             width="650">
                             <alt>The 'Add folder structure' dialog in memoQ</alt>
                         </image>
@@ -92,7 +92,7 @@
                     you don't want to translate.</cmd>
                 <info>
                     <fig id="fig_wzg_csr_jpb">
-                        <image href="../../images/memoq-import-options.png" id="image_bsc_s3s_jpb"
+                        <image href="../images/memoq-import-options.png" id="image_bsc_s3s_jpb"
                             width="650">
                             <alt>The 'Document import options' dialog in memoQ</alt>
                         </image>
@@ -102,7 +102,7 @@
         </steps>
         <result id="result_ytl_vrr_jpb">Project files are ready for translation.<fig
                 id="fig_vyz_wsr_jpb">
-                <image href="../../images/memoq-import-result.png" id="image_q25_v3s_jpb"
+                <image href="../images/memoq-import-result.png" id="image_q25_v3s_jpb"
                     width="800">
                     <alt>DITA project imported into memoQ</alt>
                 </image>
