--- a/dita_localization_website.ditamap
+++ b/dita_localization_website.ditamap
@@ -35,7 +35,7 @@
     <topichead navtitle="Translating content in memoQ">
         <topicref
             href="topics/t_importing_a_dita_project_into_memoq.dita"/>
-        <topicref href="topics/t_translating%20repetitions.dita"
+        <topicref href="topics/t_translating_repetitions.dita"
         />
     </topichead>
     <topichead navtitle="Download the manual">
@@ -165,14 +165,14 @@
                 <topicref
                     href="topics/c_project_structure.dita"/>
                 <topicref
-                    href="topics/t_translating%20repetitions.dita"
+                    href="topics/t_translating_repetitions.dita"
                 />
             </relcell>
         </relrow>
         <relrow>
             <relcell>
                 <topicref
-                    href="topics/t_translating%20repetitions.dita"
+                    href="topics/t_translating_repetitions.dita"
                 />
             </relcell>
             <relcell>
