Add glossary entries

--- a/topics/c_translation_friendly_text.dita
+++ b/topics/c_translation_friendly_text.dita
@@ -38,8 +38,8 @@
                         </fig></li>
                     <li>Use active voice.</li>
                     <li>Split clusters of nouns into smaller logical units.<fig id="fig_gdn_zjp_jpb">
-                            <image href="../images/writing-noun-clusters.svg"
-                                id="image_xfz_4yp_jpb" width="400">
+                            <image href="../images/writing-noun-clusters.svg" id="image_xfz_4yp_jpb"
+                                width="400">
                                 <alt>For example, instead of writing 'magic wand cleaning center,'
                                     write 'center for cleaning magic wands.'</alt>
                             </image>
